# dasVulkan-new

./: .das_module  .das_package  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  _scene_probe.das
.github/workflows/: tests.yml
cmake/: DasVulkanCompileShader.cmake
daslib/: spirv_vulkan_shader.das  vulkan_assets.das  vulkan_boost.das  vulkan_cmds.das  vulkan_commands.das  vulkan_ctors.das  vulkan_gltf.das  vulkan_handles.das  vulkan_imgui_app.das  vulkan_imgui_driver.das  vulkan_lint.das  vulkan_lint_data.das  vulkan_live.das  vulkan_reflect.das  vulkan_runtime.das  vulkan_structs.das  vulkan_window.das
doc/source/stdlib/: external_types.rst
doc/source/tutorials/: 01_triangle.rst  02_mandelbrot.rst  03_sdf.rst  04_cube.rst  05_instancing.rst  06_skybox.rst  07_particles.rst  08_shadow.rst  09_msaa.rst  10_deferred.rst  11_hdr.rst  12_gpu_driven.rst  13_mesh.rst  14_teapot.rst  15_raytracing.rst  index.rst
examples/: compute.das  compute_boost.das  device_probe.das  enumerate.das  offscreen_triangle.das  offscreen_triangle_boost.das  smoke.das  triangle_example_shaders.das  triangle_shaders.das  window_triangle.das
examples/shaders/: triangle.vert  triangle.vert.spv
generator/: generate.das  skip_report.txt  vk_emit.das  vk_emit_boost.das  vk_model.das  vk_naming.das
skills/: recording.md
src/: dasVULKAN.gen.h  dasVULKAN.gen_funcs_11.cpp  dasVULKAN.h  dasVULKAN.main.cpp
tests/integration/: array_shaders.das  compute_shaders.das  flat_shaders.das  phase4_shaders.das  scene_helpers.das  separate_shaders.das  storage_image_shaders.das  test_batch_creators.das  test_bindless_descriptor_array.das  test_boost_descriptors.das  test_compute.das  test_compute_features.das  test_compute_shared.das  test_debug_messenger.das  test_enumerate.das  test_gl_draw_id.das  test_gltf.das  test_handles.das  test_nonuniform_ext.das  test_opt_ptr_view_semantics.das  test_phase4.das  test_pipeline_boost_structs.das  test_push_std140.das  test_reflect_layout.das  test_rt_smoke.das  test_sampler2darray.das  test_separate_image_sampler.das  test_storage_image.das  test_stype_prefill.das  test_texelfetch.das  test_triangle.das  test_ubo_mat3.das  test_ubo_multi.das  test_ubo_nested.das  texelfetch_shaders.das  triangle_shaders.das
tutorials/: .das_test
tutorials/01_triangle/: test_triangle.das  triangle_tut.das  triangle_tut_shaders.das
tutorials/01_triangle/recording/: record_triangle.das
tutorials/01_triangle/window/: show_triangle.das
tutorials/02_mandelbrot/: mandelbrot_tut.das  mandelbrot_tut_shaders.das  test_mandelbrot.das
tutorials/02_mandelbrot/recording/: record_mandelbrot.das
tutorials/02_mandelbrot/window/: mandelbrot_compute.das  mandelbrot_view_shaders.das  mandelbrot_zoom_shaders.das  show_mandelbrot_blit.das  show_mandelbrot_sampled.das
tutorials/03_sdf/: sdf_tut.das  sdf_tut_shaders.das  test_sdf.das
tutorials/03_sdf/recording/: record_sdf.das
tutorials/03_sdf/window/: resident_compute.das  show_sdf.das
tutorials/04_cube/: cube_tut.das  cube_tut_shaders.das  test_cube.das
tutorials/04_cube/recording/: record_cube.das
tutorials/04_cube/window/: show_cube.das
tutorials/05_instancing/: instancing_tut.das  instancing_tut_shaders.das  test_instancing.das
tutorials/05_instancing/recording/: record_instancing.das
tutorials/05_instancing/window/: show_instancing.das
tutorials/06_skybox/: skybox_tut.das  skybox_tut_shaders.das  test_skybox.das
tutorials/06_skybox/recording/: record_skybox.das
tutorials/06_skybox/window/: show_skybox.das
tutorials/07_particles/: particles_tut.das  particles_tut_shaders.das  test_particles.das
tutorials/07_particles/recording/: record_particles.das
tutorials/07_particles/window/: show_particles.das
tutorials/08_shadow/: shadow_tut.das  shadow_tut_shaders.das  test_shadow.das
tutorials/08_shadow/recording/: record_shadow.das
tutorials/08_shadow/window/: show_shadow.das
tutorials/09_msaa/: msaa_tut.das  msaa_tut_shaders.das  test_msaa.das
tutorials/09_msaa/recording/: record_msaa.das
tutorials/09_msaa/window/: show_msaa.das
tutorials/10_deferred/: deferred_tut.das  deferred_tut_shaders.das  test_deferred.das
tutorials/10_deferred/recording/: record_deferred.das
tutorials/10_deferred/window/: show_deferred.das
tutorials/11_hdr/: hdr_tut.das  hdr_tut_shaders.das  test_hdr.das
tutorials/11_hdr/recording/: record_hdr.das
tutorials/11_hdr/window/: show_hdr.das
tutorials/12_gpu_driven/: gpu_driven_tut.das  gpu_driven_tut_shaders.das  test_gpu_driven.das
tutorials/12_gpu_driven/recording/: record_gpu_driven.das
tutorials/12_gpu_driven/window/: show_gpu_driven.das
tutorials/13_mesh/: mesh_tut.das  mesh_tut_shaders.das  test_mesh.das
tutorials/13_mesh/window/: show_mesh.das
tutorials/14_teapot/: teapot_data.das  teapot_tut.das  teapot_tut_shaders.das  test_teapot.das
tutorials/14_teapot/recording/: record_teapot.das
tutorials/14_teapot/tools/: gen_teapot_data.py
tutorials/14_teapot/window/: show_teapot.das
tutorials/15_raytracing/: raytracing_tut.das  raytracing_tut_shaders.das  test_raytracing.das
tutorials/15_raytracing/recording/: record_raytracing.das
tutorials/15_raytracing/window/: show_raytracing.das
tutorials/_assets/cat/: gltf_to_obj.py
tutorials/recording/: tutorial_record.das  tutorial_record_voiced.das
utils/: vulkan2rst.das
utils/git-hooks/: pre-push
